updated styles and cleaned up some importing logic

--- a/src/components/home_page/home_page.module.scss
+++ b/src/components/home_page/home_page.module.scss
@@ -1,6 +1,4 @@
-.red_centered_button {
-	color: rgb(21, 248, 0);
-	background-color: black;
+div.song_list {
+	max-width: 95%;
 	margin: auto;
-	text-align: center;
 }
