--- a/src/components/controls/controls.module.scss
+++ b/src/components/controls/controls.module.scss
@@ -5,3 +5,21 @@ p.now_playing {
   padding-top: 10px;
   padding-bottom: 10px;
 }
+
+input.button {
+  max-height: 1rlh;
+  margin: .25rlh;
+}
+
+img.button {
+  max-height: 1rlh;
+  margin: .25rlh;
+}
+
+p.time_stamp {
+}
+
+div.input_group {
+  display: flex;
+  justify-content: center;
+}
