--- a/src/styles/main.module.scss
+++ b/src/styles/main.module.scss
@@ -3,3 +3,18 @@
 	margin: auto;
 	display: block;
 }
+
+p, h1, h2, h3, h4, h5, h6 {
+	font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+
+input {
+	height: 1rlh;
+}
+
+body {
+	padding: 0px;
+	margin: 0px;
+	overflow: hidden;
+}
