Further UI cleanup

--- a/src/components/controls/controls.module.scss
+++ b/src/components/controls/controls.module.scss
@@ -17,9 +17,13 @@ img.button {
 }
 
 p.time_stamp {
+    justify-self: center;
+    margin: 0px;
 }
 
 div.input_group {
   display: flex;
   justify-content: center;
+  justify-items: center;
+  align-items: center;
 }
