--- a/src/components/queue/queue.module.scss
+++ b/src/components/queue/queue.module.scss
@@ -1,11 +1,16 @@
 div.container{
-  width: 30%;
-  padding-left: 2vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   max-height: 100%;
   overflow: hidden;
 }
 
 div.songs{
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  width: 100%;
   max-height: 100%;
   overflow-y: auto;
 }
