Defined pattern for using global color scheme

--- a/src/components/home_page/home_page.module.scss
+++ b/src/components/home_page/home_page.module.scss
@@ -1,7 +1,11 @@
+// Paths are relative to (cargo root dir)/stylance
+@use "../src/styles/color.scss" as colors;
+
 div.container {
 	display: flex;
 	flex-direction: column;
 	height: 100dvh;
+	background-color: colors.$Darker;
 }
 
 div.main_view {
@@ -20,13 +24,12 @@ div.controls {
 	min-height: 0;
 	max-height: 10%;
 	padding: 20px;
-	background-color: lightgray;
 }
 
 .queue {
 	box-sizing: border-box;
 	border-radius: 1dvh;
-	border: solid lightgray 5px;
+	border: solid colors.$AccentLight 5px;
 	flex-shrink: 1;
 	flex-basis: 45%;
 	height: 100%;
@@ -36,7 +39,8 @@ div.controls {
 .song_list {
 	box-sizing: border-box;
 	border-radius: 1dvh;
-	border: solid lightgray 5px;
+	background-color: colors.$Dark;
+	border: solid colors.$AccentLight 5px;
 	align-self: flex-start;
 	flex-shrink: 3;
 	flex-basis: 70%;
